[package]
name = "parse-env-filter"
version = "0.1.0"
edition = "2018"

description = "parser for the env logger filter format"
readme = "./README.md"
repository = "https://github.com/CAD97/tracing-utils/tree/main/libs/parse-env-filter"
license = "MIT OR Apache-2.0"
keywords = ["tracing", "env_logger", "env_filter", "parsing"]
categories = ["no-std", "parser-implementations"]


[features]
default = ["alloc"]
alloc = []

[[test]]
name = "examples"
required-features = [ "alloc" ]
